service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-keycloak-ssl
spec:
  selector:
    app: frontend-keycloak-ssl
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
