ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-keycloak-ssl
  annotations:
    kubernetes.io/ingressClassName: "nginx"
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  rules:
  - host: frontkey.211.43.12.162.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-keycloak-ssl
            port:
              number: 80
